k8s_mastercc_hpc4ai/customer-pgadmin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-pgadmin-deployment
  namespace: slanza
  labels:
    app: customer-pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-pgadmin
  template:
    metadata:
      labels:
        app: customer-pgadmin
    spec:
      containers:
        - name: customer-pgadmin
          image: dpage/pgadmin4
          ports:
            - containerPort: 5050
---
apiVersion: v1
kind: Service
metadata:
  name: customer-pgadmin-service
  namespace: slanza
spec:
  selector:
    app: customer-pgadmin
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
