k8s_mastercc_hpc4ai/mongo-express.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-express-deployment
  namespace: slanza
  labels:
    app: mongodb-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-express
  template:
    metadata:
      labels:
        app: mongodb-express
    spec:
      containers:
        - name: mongodb-express
          image: mongo-express
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-express-service
  namespace: slanza
spec:
  selector:
    app: mongodb-express
  # type: LoadBalancer # Uncomment for external service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      # nodePort: 30000 # Uncomment for external service
