k8s_mastercc_hpc4ai/product-mongo-express.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-mongodb-express-deployment
  namespace: slanza
  labels:
    app: product-mongodb-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-mongodb-express
  template:
    metadata:
      labels:
        app: product-mongodb-express
    spec:
      containers:
        - name: product-mongodb-express
          image: mongo-express
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: product-mongodb-express-service
  namespace: slanza
spec:
  selector:
    app: product-mongodb-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
