k8s_mastercc_hpc4ai/product-mongo.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: product-mongodb-statefulset
  namespace: slanza
  labels:
    app: product-mongodb
spec:
  serviceName: product-mongodb
  replicas: 1
  selector:
    matchLabels:
      app: product-mongodb
  template:
    metadata:
      labels:
        app: product-mongodb
    spec:
      containers:
        - name: product-mongodb
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: product-mongodb-persistent-storage
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: product-mongodb-persistent-storage
      spec:
        storageClassName: cdk-cinder
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: product-mongodb-service
  namespace: slanza
spec:
  selector:
    app: product-mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
