k8s_mastercc_hpc4ai/store-mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-mongodb-deployment
  namespace: slanza
  labels:
    app: store-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-mongodb
  template:
    metadata:
      labels:
        app: store-mongodb
    spec:
      containers:
        - name: store-mongodb
          image: mongo
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: store-mongodb-service
  namespace: slanza
spec:
  selector:
    app: store-mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
