k8s_mastercc_hpc4ai/customer-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-ingress
  namespace: slanza
spec:
  rules:
    - host: gsf.mastercc.hpc4ai.unito.it
      http:
        paths:
          - path: /api/v1/customers/pgadmin
            pathType: Prefix
            backend:
              service:
                name: customer-pgadmin-service
                port:
                  number: 5050
    - host: gsf.mastercc.hpc4ai.unito.it
      http:
        paths:
          - path: /api/v1/customers
            pathType: Prefix
            backend:
              service:
                name: customer-spring-app-service
                port:
                  number: 8080
