k8s_mastercc_hpc4ai/mongo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb-ingress
  namespace: slanza
spec:
  # tls:
  # - hosts:
  #   - myapp.com
  #     secretName: myapp-secret-tls
  rules:
    - host: gsf.mastercc.hpc4ai.unito.it
      http:
        paths:
          - path: /express
            pathType: Prefix
            backend:
              service:
                name: mongodb-express-service
                port:
                  number: 8081
    - host: gsf.mastercc.hpc4ai.unito.it
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: product-spring-app-service
                port:
                  number: 8080
